// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell Value is -1 1`] = `
<div
  className="col-4 box"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={-1}
>
  <p
    className="o"
  >
    O
  </p>
</div>
`;

exports[`Cell Value is 0 1`] = `
<div
  className="col-4 box"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={-1}
>
  <p
    className=""
  >
    
  </p>
</div>
`;

exports[`Cell Value is 1 1`] = `
<div
  className="col-4 box"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={-1}
>
  <p
    className="x"
  >
    X
  </p>
</div>
`;
